add middleware to modules
